--- a/robot/README
+++ b/robot/README
@@ -1,76 +1,80 @@
-# Python For Me Auriga
+# Python For MegaPi
 ## How To Use
- * Compile and upload the Firmware to MeAuriga
+ * Compile and upload the Firmware to MegaPi ( https://github.com/Makeblock-Official/FirmwareForMegaPi )
  * On your Raspberry Pi, 
  ```
- 
+ sudo pip install megapi
+ ```
  * Insert the initial code for starting MegaPi first.
 ```
- from meauriga import *
- bot = MeAuriga()
+ from megapi import *
+ bot = MegaPi()
  bot.start()
  ```
  * python your code
 
 ## Python API
  * Start
- 	* **MeAuriga**()
+ 	* **MegaPi**()
  	* **start**()
  	
  * GPIO
- 	* *Not tested* **digitalWrite**( pin, level )
- 	* *Not tested* **pwmWrite**( pin, pwm )
- 	* *Not tested* **digitalRead**( pin, **def** onResult )
- 	* *Not tested* **analogRead**( pin, **def** onResult )
+ 	* **digitalWrite**( pin, level )
+ 	* **pwmWrite**( pin, pwm )
+ 	* **digitalRead**( pin, **def** onResult )
+ 	* **analogRead**( pin, **def** onResult )
  	
  * Motion
 	* DC Motor
-	  * *Not tested* **dcMotorRun**( port, speed )
+	  * **dcMotorRun**( port, speed )
 	* Servo Motor
-	  * *Not tested* **servoRun**( port, angle )
+	  * **servoRun**( port, angle )
 	* Encoder Motor
-	  * *Not tested* **encoderMotorRun**( port, speed )
-	  * *Not tested* **encoderMotorMove**( port, speed, distance, **def** onFinish )
-	  * *Not tested* **encoderMotorMoveTo**( port, speed, position, **def** onFinish )
+	  * **encoderMotorRun**( port, speed )
+	  * **encoderMotorMove**( port, speed, distance, **def** onFinish )
+	  * **encoderMotorMoveTo**( port, speed, position, **def** onFinish )
+	  * **encoderMotorSetCurPosZero( port )
+	  * **encoderMotorPosition( port, **def** onResult )
+	  * **encoderMotorSpeed( port, **def** onResult )
 	* Stepper Motor
-	  * *Not tested* **stepperMotorSetting**( port, microsteps, acceleration )
-	  * *Not tested* **stepperMotorRun**( port, speed )
-	  * *Not tested* **stepperMotorMove**( port, speed, distance, **def** onFinish )
-	  * *Not tested* **stepperMotorMoveTo**( port, speed, position, **def** onFinish )
+	  * **stepperMotorRun**( port, speed )
+	  * **stepperMotorMove**( port, speed, distance, **def** onFinish )
+	  * **stepperMotorMoveTo**( port, speed, position, **def** onFinish )
+	  * **stepperMotorSetCurPosZero( port )
 	  
  * Sensors
  	* Ultrasonic Sensor
  	  * **ultrasonicSensorRead** ( port, **def** onResult ) 
  	* LineFollow Sensor
- 	  * *Not tested* **lineFollowerRead** ( port, **def** onResult ) 
+ 	  * **lineFollowerRead** ( port, **def** onResult ) 
  	* Light Sensor
- 	  * *Not tested* **lightSensorRead** ( port, **def** onResult ) 
+ 	  * **lightSensorRead** ( port, **def** onResult ) 
  	* Sound Sensor
- 	  * *Not tested* **soundSensorRead** ( port, **def** onResult ) 
+ 	  * **soundSensorRead** ( port, **def** onResult ) 
  	* Temperature Sensor
- 	  * *Not tested* **temperatureRead** ( port, **def** onResult ) 
+ 	  * **temperatureRead** ( port, **def** onResult ) 
  	* PIR Motion Sensor
- 	  * *Not tested* **pirMotionSensorRead** ( port, **def** onResult ) 
+ 	  * **pirMotionSensorRead** ( port, **def** onResult ) 
  	* Touch Sensor
- 	  * *Not tested* **touchSensorRead** ( port, **def** onResult ) 
+ 	  * **touchSensorRead** ( port, **def** onResult ) 
  	* LimitSwitch
- 	  * *Not tested* **limitSwitchRead** ( port, slot, **def** onResult ) 
+ 	  * **limitSwitchRead** ( port, slot, **def** onResult ) 
  	* Humiture Sensor
- 	  * *Not tested* **humitureSensorRead** ( port, type, **def** onResult ) 
+ 	  * **humitureSensorRead** ( port, type, **def** onResult ) 
  	* Gas Sensor
- 	  * *Not tested* **gasSensorRead** ( port, **def** onResult )
+ 	  * **gasSensorRead** ( port, **def** onResult )
  	* Flame Sensor
- 	  * *Not tested* **flameSensorRead** ( port, **def** onResult ) 
+ 	  * **flameSensorRead** ( port, **def** onResult ) 
  	* Button
- 	  * *Not tested* **buttonRead** ( port, **def** onResult ) 
+ 	  * **buttonRead** ( port, **def** onResult ) 
  	* Potentiometer
- 	  * *Not tested* **potentiometerRead** ( port, **def** onResult )
+ 	  * **potentiometerRead** ( port, **def** onResult )
  	* Joystick
- 	  * *Not tested* **joystickRead** ( port, axis, **def** onResult )
+ 	  * **joystickRead** ( port, axis, **def** onResult )
  	* 3-Axis Accelerometer and Gyro Sensor
- 	  * *Not tested* **gyroRead** ( axis, **def** onResult )
+ 	  * **gyroRead** (port, axis, **def** onResult )
  	* Compass
- 	  * *Not tested* **compassRead** ( **def** onResult )
+ 	  * **compassRead** ( **def** onResult )
  	
  * Display
  	* RGB Led
@@ -78,16 +82,16 @@
  	  * **rgbLedShow** ( port, slot )
  	  * **rgbLedDisplay** ( port, slot, index, r, g, b )
  	* 7-segment Display
- 	  * *Not tested* **sevenSegmentDisplay** ( port, value )
+ 	  * **sevenSegmentDisplay** ( port, value )
  	* Led Matrix Display
- 	  * *Not tested* **ledMatrixDisplayMessage** ( port, x, y, msg )
- 	  * *Not tested* **ledMatrixDisplayRaw** ( port, buffer )
+ 	  * **ledMatrixDisplayMessage** ( port, x, y, msg )
+ 	  * **ledMatrixDisplayRaw** ( port, buffer )
  	* Serial LCD Display
- 	  * *Not tested* **lcdDisplay** ( string )
+ 	  * **lcdDisplay** ( string )
  	  
  * Others
  	* DSLR Shutter
-	  * *Not tested* **shutterOn** ( port )
-	  * *Not tested* **shutterOff** ( port )
-	  * *Not tested* **focusOn** ( port )
-	  * *Not tested* **focusOff** ( port )
+	  * **shutterOn** ( port )
+	  * **shutterOff** ( port )
+	  * **focusOn** ( port )
+	  * **focusOff** ( port )
